<resources>
    <string name="app_name">FruitMachine</string>
    <string name="spin_button">Spin</string>
    <string name="bar_symbol">Bar</string>
    <string name="orange_symbol">Orange</string>
    <string name="lemon_symbol">Lemon</string>
    <string name="cherry_symbol">Cherry</string>
    <string name="diamond_symbol">Diamond</string>
    <string name="wallet_text">Welcome  + player.getName() + ", your balance is " + player.getWallet()</string>
    <string name="prompt">Type SPIN to play or QUIT to end game</string>

    <string name="win_text">"Congrats! You won £"  + </string>
    <string name="lose_text">"Sorry, you lost this time"</string>
    <string name="quit_text">"Thanks for playing! Your balance is £" + player.getWallet() + "0"</string>
    <string name="splash_welcome">"Welcome to the Slots!"</string>
    <string name="enter_name">Please enter your name</string>
    <string name="begin_button">Begin</string>
    <string name="bigbet_button"></string>
</resources>
